# COC

./: .gitignore  README.md  run_dev.py  test_e2e.sh
Backend/: .env.example  pyproject.toml  requirements.txt
Backend/apps/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
Backend/apps/chat/migrations/: 0001_initial.py
Backend/apps/clan/: admin.py  apps.py  client.py  models.py  urls.py  views.py
Backend/apps/clan/migrations/: 0001_initial.py
Backend/apps/push/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Backend/apps/push/migrations/: 0001_initial.py
Backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/apps/users/migrations/: 0001_initial.py
Backend/config/: asgi.py  urls.py
Backend/config/settings/: base.py  dev.py
Frontend/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
Frontend/public/: sw.js
Frontend/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
Frontend/src/app/(tabs)/: layout.tsx
Frontend/src/app/(tabs)/chat/: page.tsx
Frontend/src/app/(tabs)/clan/: page.tsx
Frontend/src/app/login/: page.tsx
Frontend/src/app/register/: page.tsx
Frontend/src/components/: auth-guard.tsx  coc-icon.tsx
Frontend/src/components/ui/: sheet.tsx  toast.tsx
Frontend/src/hooks/: use-chat-socket.ts  use-push-subscription.ts  use-toast.ts
Frontend/src/lib/: api.ts  coc-assets.ts  providers.tsx  types.ts
Frontend/src/stores/: auth-store.ts  ui-store.ts
scripts/: download_coc_assets.py
(+6 files in other folders)
