[project]
name = "coc-clan-backend"
version = "0.1.0"
description = "COC Clan App — Django Backend"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
